Various fix, rewriting for kids + first collapse always open when looking on a tutorial

--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -12,6 +12,11 @@ $link-colorHover: $customWhite;
 $secondary: $customGreen;
 $secondary-link-color:$customWhite;
 
+$custom-file-text: (
+        en: "Browse",
+        fr: "Parcourir"
+);
+
 $font-primary:Jaapokki;
 $font-secondary: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 ;
