--- a/assets/scss/tuto.scss
+++ b/assets/scss/tuto.scss
@@ -36,14 +36,13 @@ ol li::before {
 .customCollapse button {
   position: relative;
   top:-22px;
-  background-color:$secondary;
-  color:$link-colorHover;
+  color:$link-colorHover !important;
   font-size:20px;
   font-family:$font-secondary;;
 }
 
 .customCollapse button:hover {
-  background-color: $link-color;
+  background-color: $link-color !important;
 }
 
 .customCollapse button:focus, .customCollapse button:active {
@@ -84,6 +83,14 @@ ol li::before {
   margin-bottom: -5px;
   font-family:$font-primary;
   font-size:35px;
+  text-align: center;
+}
+
+.tutorialIndexDescription{
+  margin-top:10px;
+  margin-bottom: 10px;
+  font-family: $font-secondary;
+  font-size:20px;
   text-align: center;
 }
 
