--- a/assets/scss/tutoCreate.scss
+++ b/assets/scss/tutoCreate.scss
@@ -7,6 +7,21 @@
    font-size:35px;
    text-align: center;
   }
+  .tutoEmojiHelp{
+    margin-top:20px;
+    margin-bottom:40px;
+    font-size:20px;
+    font-family:$font-secondary;
+    text-align: center;
+    a{
+      color:$customRed;
+      text-decoration:none;
+    }
+    a:hover{
+      color:$link-color;
+    }
+  }
+
   .btnCreateEdit{
     margin-bottom:20px;
     background-color:$secondary;
@@ -42,6 +57,10 @@
   ol{
     list-style: none;
     counter-reset: step;
+    .custom-file{
+      position:relative;
+      top:-20px;
+    }
     li{
       div{
         margin-top:30px;
@@ -56,7 +75,7 @@
   }
   ol li::before {
     content: counter(step) ") ";
-    color: $secondary;
+    color: $customSkyblue;
     font-family: $font-primary;
     font-size:20px;
     position:relative;
@@ -102,4 +121,9 @@
     outline: $link-colorHover !important;
     box-shadow: none !important;
   }
+}
+
+label.custom-file-label:after{
+  background:$secondary;
+  color:$link-colorHover;
 }
